# interface-types

./: Cargo.toml  rust-toolchain.toml
.github/: renovate.json
.github/workflows/: test.yml
crates/it-lilo/: Cargo.toml
crates/it-lilo-utils/: Cargo.toml
crates/it-lilo-utils/src/: error.rs  lib.rs  macros.rs  memory_reader.rs  memory_writer.rs
crates/it-lilo-utils/src/lifter/: mod.rs
crates/it-lilo-utils/src/lowerer/: lower_array.rs  lower_record.rs
crates/it-lilo/src/: lib.rs  utils.rs
crates/it-lilo/src/lifter/: error.rs  lift_array.rs  lift_record.rs  macros.rs  memory_reader.rs  mod.rs
crates/it-lilo/src/lowerer/: error.rs  lower_array.rs  lower_record.rs  memory_writer.rs  mod.rs
crates/it-lilo/src/traits/: allocatable.rs  heapable.rs  mod.rs  record_resolvable.rs  sequential_reader.rs  sequential_writer.rs
crates/it-memory-traits/: Cargo.toml
crates/it-memory-traits/src/: errors.rs  lib.rs
crates/it-traits/: Cargo.toml
crates/it-traits/src/: lib.rs  macros.rs
crates/it-types/: Cargo.toml
crates/it-types/src/: types.rs  values.rs
crates/it-types/src/impls/: types.rs  values.rs
crates/to-bytes/: Cargo.toml
crates/utils/: Cargo.toml
crates/utils/src/: lib.rs
src/: ast.rs  types.rs
src/decoders/: binary.rs  wat.rs
src/encoders/: binary.rs  wat.rs
src/interpreter/instructions/: call_core.rs
src/interpreter/wasm/: structures.rs
wasmer-it/: Cargo.toml
wasmer-it/src/: ast.rs  errors.rs  lib.rs  macros.rs
wasmer-it/src/decoders/: binary.rs  wat.rs
wasmer-it/src/encoders/: binary.rs  wat.rs
wasmer-it/src/interpreter/: mod.rs
wasmer-it/src/interpreter/instructions/: argument_get.rs  arrays.rs  byte_arrays.rs  call_core.rs  dup.rs  mod.rs  numbers.rs  push.rs  records.rs  strings.rs  swap2.rs  utils.rs
wasmer-it/src/interpreter/instructions/arrays/: lift_array.rs  lower_array.rs  memory_writer.rs  read_arrays.rs  utils.rs
wasmer-it/src/interpreter/instructions/lilo/: li_helper.rs  lo_helper.rs  mod.rs  utils.rs
wasmer-it/src/interpreter/instructions/records/: error.rs  lift_record.rs  lower_record.rs  value_reader.rs
wasmer-it/src/interpreter/wasm/: structures.rs
wasmer-it/src/serde/: de.rs
