[package]
name = "wasmer-interface-types-fl"
version = "0.26.1"
description = "WebAssembly Interface Types library for Wasmer"
license = "MIT"
authors = ["The Wasmer Engineering Team <engineering@wasmer.io>"]
repository = "https://github.com/wasmerio/wasmer"
edition = "2018"

[dependencies]
fluence-it-types = { path = "../crates/it-types", version = "0.4.1", features = ["impls"] }
it-to-bytes = { path = "../crates/to-bytes", version = "0.1.0" }
it-lilo = { path = "../crates/it-lilo", version = "0.5.1" }
it-memory-traits = { path = "../crates/it-memory-traits", version = "0.4.0" }

anyhow = "1.0.75"
nom = "7.1"
# do not update wast, new versions expect different wit syntax
wast = "8.0"

# `serde` is useful only to simplify the users' life. It is not
# required by WIT itself, is is used to cross the boundary between the
# host and WIT more easily, but it is not used inside Wasm.
serde = { version = "1.0", features = ["derive", "rc"], optional = true }
serde_json = "1.0"
safe-transmute = "0.11.2"
log = "0.4.17"
itertools = "0.10.5"

thiserror = "1.0.38"
semver = "1.0.16"

[features]
default = ["serde"]
