[package]
name = "it-lilo"
version = "0.5.0"
authors = ["Fluence Labs"]
description = "Defines some helper utils for lifting/lowering IT"
edition = "2018"
license = "Apache-2.0"

[lib]
name = "it_lilo"
path = "src/lib.rs"

[dependencies]
fluence-it-types = { path = "../it-types/", version = "0.4.0" }
it-memory-traits = { path = "../it-memory-traits", version = "0.4.0" }

paste = "1.0.11"
thiserror = "1.0.38"
log = "0.4.17"
