[package]
name = "fluence-it-types"
version = "0.3.2"
description = "Definitions of IValue and IType"
authors = ["Fluence Labs"]
edition = "2018"
license = "Apache-2.0"

[lib]
name = "fluence_it_types"
path = "src/lib.rs"

[dependencies]
it-to-bytes = { path = "../to-bytes/", version = "0.1.0" }

serde = { version = "1.0.147", features = ["derive", "rc"]}

nom = { version = "7.1", optional = true }
wast = { version = "8.0", optional = true }

variant_count = "1.1"

[features]
impls = ["nom", "wast"]
